--- a/doc/sections/5-methodology.tex
+++ b/doc/sections/5-methodology.tex
@@ -51,7 +51,7 @@ Sennrich's repository's code has some additional parameters that were not releva
 	\item Write vocabulary to a file.
 \end{enumerate}
 
-This step of the pipeline only has to be done once for each corpus, afterwards the vocabulary can be used in different ways. But this minimal algorithm, since it has to count all the pairs in the whole corpus in each iteration, takes a long time. One of the improvements of this thesis is optimizing the runtime of this algorithm, which will be explained further down. With the given corpus, these are the 10 most frequent merges in the English language are: \_t h, \_th e, o n, r e, t i, e n, e r, i n, i s, n d. And the 10 most frequent merges in German: e n, e r, c h, i e, e i, n d, n g, \_d ie, s t, i ch.
+This step of the pipeline only has to be done once for each corpus, afterwards the vocabulary can be used in different ways. But this minimal algorithm, since it has to count all the pairs in the whole corpus in each iteration, takes a long time. One of the improvements of this thesis is optimizing the runtime of this algorithm, which will be explained in the subsequent sections of this chapter. With the given corpus, these are the 10 most frequent merges in the English language: \_t h, \_th e, o n, r e, t i, e n, e r, i n, i s, n d. And the 10 most frequent merges in German: e n, e r, c h, i e, e i, n d, n g, \_d ie, s t, i ch.
 
 \subsection{Apply BPE algorithm}\label{met:applybpe}
 
@@ -110,13 +110,13 @@ We can see bigger subwords being merged, such as \emph{reading}, \emph{first}, \
 	\_der \_ursprüngliche \_Vorschlag \_der \_Kommission \_wurde \_vom \_Parlament \_in \_erster \_Lesung \_ohne \_Änderungen \_verabschiedet \_.
 \end{quote}
 
-Most words are merged, except \emph{\_dis abled} in English, and \emph{\_T ransp ortausschuß} in German for instance. At this point, the corpus isn't composed of words anymore, but rather of subwords.
+Most words are merged, except \emph{\_dis abled} in English, and \emph{\_T ransp ortausschuß} in German for instance. At this point, the corpus is not composed of words anymore, but rather of subwords.
 
 \subsection{Extract alignments}\label{subsec:extractalign}
 
-To evaluate if the BPE units are good, bilingual corpora are aligned, and then compared against a gold standard. The motivation behind alignment and how it works can be found in~\ref{ch:translation}. The challenge here lies in the fact that if the BPEs are of good quality, the alignment algorithm will align subword items correctly, and therefore in the subword-to-word mapping, the word alignments will have a high score relative to the gold standard.
+To evaluate if the BPE units are good, bilingual corpora are aligned  and then compared against a gold standard. The motivation behind alignment and how it works can be found in~\ref{ch:translation}. The challenge here lies in the fact that if the BPEs are of good quality, the alignment algorithm will align subword items correctly, and therefore in the subword-to-word mapping, the word alignments will have a high score relative to the gold standard.
 
-On the first step, alignment, two algorithms have been used, namely fastalign and eflomal. The software installation guides can be found in the development section~\ref{ch:development}. These algorithms take English text and German as input and create an alignment file as output. For the example above:
+On the first step, alignment, two algorithms have been used, namely \emph{Fastalign} and \emph{Eflomal}. The software installation guides can be found in the development section~\ref{ch:development}. These algorithms take English text and German as input and create an alignment file as output. For the example above:
 
 \begin{quote}
 	English sentence: The Committee on Transport and Tourism has adopted four amendments for the second reading .\\
@@ -129,7 +129,7 @@ On the first step, alignment, two algorithms have been used, namely fastalign an
 \end{quote}
 
 \clearpage
-Many words have one-to-one alignment, such as \emph{four}-\emph{vier} and \emph{adopted}-\emph{verabschiedet}. Some others have many-to-one alignments, such as \emph{Committee on Transport and Tourism}-\emph{Transportausschuß} and one-to-many alignments such as \emph{unamended}-\emph{ohne Änderungen}. In our case however, the input files aren't composed by words, but rather by subwords. And the alignments are done among subwords. Using the example above but with subwords instead of words:
+Many words have one-to-one alignment, such as \emph{four}-\emph{vier} and \emph{adopted}-\emph{verabschiedet}. Some others have many-to-one alignments, such as \emph{Committee on Transport and Tourism}-\emph{Transportausschuß} and one-to-many alignments such as \emph{unamended}-\emph{ohne Änderungen}. In our case however, the input files are not composed by words, but rather by subwords. And the alignments are done among subwords. Using the example above but with subwords instead of words:
 
 \begin{quote}
 	English sentence: \_the \_Committee \_on \_Transport \_and \_Tourism \_has \_adopted \_four \_amendments \_for \_the \_second \_reading \_.\\
@@ -137,7 +137,7 @@ Many words have one-to-one alignment, such as \emph{four}-\emph{vier} and \emph{
 	Alignment output: 0-0 1-1 2-1 3-1 4-1 5-1 1-2 2-2 3-2 4-2 5-2 1-3 2-3 3-3 4-3 5-3 6-4 7-11 8-9 9-10 10-5 11-6 12-7 13-8 14-12
 \end{quote}
 
-Now there are subword alignments as opposed to word alignments. For instance, since the German word \emph{Transportausschuß} is divided into three words, namely \emph{T ransp ortausschuß}, the many-to-one alignment from the previous case is now a many-to-many alignment. The number of alignment has grown from last example. Because the gold standard against which the system is being evaluated consists of word alignments, it's necesssary to map subword alignments into word alignments, which is the second step in this algorithm. Using English and German corpora and the alignment file as input files, this algorithm gives a word alignment file as output.
+Now there are subword alignments as opposed to word alignments. For instance, since the German word \emph{Transportausschuß} is divided into three words, namely \emph{T ransp ortausschuß}, the many-to-one alignment from the previous case is now a many-to-many alignment. The number of alignment has grown from last example. Because the gold standard against which the system is being evaluated consists of word alignments, it is necessary to map subword alignments into word alignments, which is the second step in this algorithm. Using English and German corpora and the alignment file as input files, this algorithm gives a word alignment file as output.
 
 \begin{quote}
 	English sentence: \_the \_Committee \_on \_Transport \_and \_Tourism \_has \_adopted \_four \_amendments \_for \_the \_second \_reading \_.\\
@@ -153,14 +153,14 @@ In the final step, the alignment scores are computed against the gold standard. 
 \clearpage
 \section{Replication of BPE dropout}\label{met:replbpedrop}
 
-BPE dropout's difference with regards to normal BPE is the fact that some merges don't take place. Based on this random factor, each time this system is carried out, new BPE merges are created. For example, if the most merge in English \emph{(\_t, h)} is not merged, the resulting file of BPE merges is vastly different than if the 10th most frequent merge does not take place. In order to obtain different instances, the dropout algorithm is run a number of times, in this case 10 times, the alignments extracted 10 times, and then the alignments aggregated. Regarding each specific step, the algorithm to create the merge list (learn\_bpe) remains unchanged, the first slight change occurs when applying the BPE algorithm to the corpus.
+BPE dropout is difference with regards to normal BPE is the fact that some merges do not take place. Based on this random factor, each time this system is carried out, new BPE merges are created. For example, if the most merge in English \emph{(\_t, h)} is not merged, the resulting file of BPE merges is vastly different than if the 10th most frequent merge does not take place. In order to obtain different instances, the dropout algorithm is run a number of times, in this case 10 times, the alignments extracted 10 times, and then the alignments aggregated. Regarding each specific step, the algorithm to create the merge list (learn\_bpe) remains unchanged, the first slight change occurs when applying the BPE algorithm to the corpus.
 
 In the apply BPE algorithm, a random variable is created for every merge: if it falls below a threshold, the dropout threshold, the merge in question is discarded. Apart from this, the whole algorithm is run a number of times, creating a number of BPE files, usually ten throughout this thesis. When extracting alignments, since now there are ten BPE files instead of a single one, the whole algorithm is run ten times, and alignments for all numbers of merges multiplied by all dropout repetitions are saved. At this point, there are ten alignments for each sentence. Which alignments to pick, is the next step to be resolved. Three methods are selected:
 
 \begin{itemize}
 	\item Create the union of all alignments.
 	\item Create the intersection of all alignments.
-	\item Create a threshold parameter, for example 0.5. If an alignment is present in 50\% of all alignments for that sentence, it's added to the aggregated file.
+	\item Create a threshold parameter, for example 0.5. If an alignment is present in 50\% of all alignments for that sentence, it is added to the aggregated file.
 \end{itemize}
 
 To illustrate this with a example. Files 1, 2 and 3 are three alignment files for a given sentence pair.
@@ -174,13 +174,13 @@ To illustrate this with a example. Files 1, 2 and 3 are three alignment files fo
 	\item Aggregated file: 0-0 0-1 1-1 1-2
 \end{itemize}
 
-As it's visible in the example, the \textbf{union} case takes all alignments into account. By brute force, possibly most of the correct alignments will be present in the alignment, yielding a high recall, but the majority of the alignments in the union file will be incorrect, that is, it will have low precision. By contrast, the \textbf{intersection} case is the opposite. The file is much shorter since only the alignments present in \emph{all} files are considered, which means that these alignments will mostly be correct. But also many of the actually correct alignments will not be present, because they might have been skipped, and therefore aren't present in the intersection. 
+As it is visible in the example, the \textbf{union} case takes all alignments into account. By brute force, possibly most of the correct alignments will be present in the alignment, yielding a high recall, but the majority of the alignments in the union file will be incorrect, that is, it will have low precision. By contrast, the \textbf{intersection} case is the opposite. The file is much shorter since only the alignments present in \emph{all} files are considered, which means that these alignments will mostly be correct. But also many of the actually correct alignments will not be present, because they might have been skipped, and therefore are not present in the intersection.
 
-The method of creating an \textbf{aggregated file} with the threshold aims to alleviate this problem by creating a sort of middle point between union and intersection. Taking a threshold value closer to 0 will mean that almost all alignments will be accepted, and therefore the score will be closer to the score of the union. In the opposite end of the spectrum, a threshold value close to 1 means that only alignments present in most alignment files will be accepted, and this resembles the intersection. Many experiments have been done with threshold values ranging from 0.3 to 0.9, the performances of which can be found in the Results chapter.
+The method of creating an \textbf{aggregated file} with the threshold aims to alleviate this problem by creating a sort of middle point between union and intersection. Taking a threshold value closer to 0 will mean that almost all alignments will be accepted, and therefore the score will be closer to the score of the union. In the opposite end of the spectrum, a threshold value close to 1 means that only alignments present in most alignment files will be accepted, and this resembles the intersection. Many experiments have been done with threshold values ranging from 0.3 to 0.9, and the corresponding scores can be found in the Results chapter.
 
 \section{Improvement of learn BPEs algorithm}\label{sec:improvlearnbpe}
 
-One of the drawbacks of the algorithm to learn BPE units is that every time a pair of sequences is merged in the corpus, all sequence pairs and their frequencies has to be computed from scratch. This requires iterating over all characters from each sentence in the corpus, and for each iteration, that is, each time a pair of sequences gets merged.
+One of the drawbacks of the algorithm to learn BPE units is that every time a pair of sequences is merged in the corpus, all sequence pairs and their frequencies has to be computed from scratch. This requires iterating over all characters from each sentence in the corpus, and for each iteration, a pair of sequences gets merged.
 
 \subsection{Updating only neighboring sequences}
 
@@ -208,7 +208,7 @@ For the sake of the example, let us assume that ('n', 'd') is the most frequent 
 	2 	\_M y \_n a m e \_i s \_B o b .
 \end{quote}
 
-In the brute force approach, each pair's frequencies are computed again: the sequence pairs ('\_T', 'h'), ('h', 'e'), etc are all revisited and their frequencies counted from scratch. But this does not have to be the case, actually the only pairs that need to be updated are the ones surrounding ('n', 'd'). When viewing this merge from a different perspective, these are the changes that occur in the pairs of tokens:
+In the brute force approach, each pair's frequency is computed again: the sequence pairs ('\_T', 'h'), ('h', 'e'), etc. are all revisited and their frequencies counted from scratch. But this does not have to be the case, actually the only pairs that need to be updated are the ones surrounding ('n', 'd'). When viewing this merge from a different perspective, these are the changes that occur in the pairs of tokens:
 
 \begin{itemize}
 	\item ('\_a', 'n') in sentence 0 now becomes ('\_a', 'nd')
@@ -217,7 +217,7 @@ In the brute force approach, each pair's frequencies are computed again: the seq
 	\item ('d', 'e') in sentence 1 now becomes ('nd', 'e')
 \end{itemize}
 
-The pair of tokens in the word 'and' which previously was ('\_a', 'n'), now becomes ('\_a', 'nd') since 'n' and 'd' have been merged. In this instance, the pair ('\_a', 'n') doesn't exist anymore, and a new pair has been created: ('\_a', 'nd'). And so on for the rest of the tokens. As a result, only the following frequency updates must be made:
+The pair of tokens in the word 'and' which previously was ('\_a', 'n'), now becomes ('\_a', 'nd') since 'n' and 'd' have been merged. In this instance, the pair ('\_a', 'n') no longer exists, and a new pair has been created: ('\_a', 'nd'). And so on for the rest of the tokens. As a result, only the following frequency updates must be made:
 
 \begin{itemize}
 	\item Reduce frequency of ('\_a', 'n') by 1, increase frequency of ('\_a', 'nd') by 1.
@@ -226,13 +226,13 @@ The pair of tokens in the word 'and' which previously was ('\_a', 'n'), now beco
 	\item Reduce frequency of ('d', 'e') by 1, increase frequency of ('n', 'de') by 1.
 \end{itemize}
 
-All the other pairs remain unchanged. This is the major improvement of this thesis regarding the learn BPE algorithm, \textbf{the fact that only neighboring tokens of the merged pair need to be updated}. Now, instead of updating each pair in each sentence, it is only necessary to update the merge pair's surrounding tokens. The way to do this is by locating the merged pair in the sentence, and updating the previous and next tokens.
+All the other pairs remain unchanged. This is the major improvement of this thesis regarding the learn-BPE algorithm, \textbf{the fact that only neighboring tokens of the merged pair need to be updated}. Now, instead of updating each pair in each sentence, it is only necessary to update the merge pair's surrounding tokens. The way to do this is by locating the merged pair in the sentence, and updating the previous and next tokens.
 
 \subsection{Saving indexes of pairs}
 
-If a pair is very frequent, it is safe to assume that it will be present in the majority of the sentences in the corpus. In the example above, the last sentence does not contain the ('n', 'd') pair. In a bigger corpus, the more merges are done, the rarer they become. It is therefore useful to only visit those sentences where the pair is present. If the merged pair only appears in 10\% of the corpus' sentences, it's a waste of resources to visit all sentences. This can be solved by saving the index where each pair appears. This way, each pair has its frequency associated to it, as well as a list of indexes where it is present. Creating this index list can be done in the initial step of the algorithm when the corpus is read and iterated completely, each pair's frequencies computed for the first time, and the indexes recorded.
+If a pair is very frequent, it is safe to assume that it will be present in the majority of the sentences in the corpus. In the example above, the last sentence does not contain the ('n', 'd') pair. In a bigger corpus, the more merges are done, the rarer they become. It is therefore useful to only visit those sentences where the pair is present. If the merged pair only appears in 10\% of the corpus' sentences, it is a waste of resources to visit all sentences. This can be solved by saving the index where each pair appears. This way, each pair has its frequency associated to it, as well as a list of indexes where it is present. Creating this index list can be done in the initial step of the algorithm when the corpus is read and iterated completely, each pair's frequency computed for the first time, and the indexes recorded.
 
-This way, when accessing the most frequent pair in the corpus, we can also access to the sentences they're present in, and iterate only those.
+This way, when accessing the most frequent pair in the corpus, we can also access to the sentences they are present in, and iterate only those.
 
 \section{BPE without word boundaries}
 
@@ -246,4 +246,4 @@ Up until this point, the underlying principle of creating BPE units is that merg
 
 This way, merges with whitespace are possible, as well as merges between endings of some words and beginnings of the next. After learning BPE units using this method, these are the most common merges in English: e \_, t h, s \_, t \_, n \_, d \_, th e\_, e r, i n, y \_. The most common BPE unit between words is \emph{of\_ the\_}. As for German, the most common merges are: n \_, e r, e n\_, c h, e \_, \_ d, e i, u n, t \_, er \_. And the most common BPE unit between words is \emph{, \_da}.
 
-Since now merges between words are possible, there are many more possible merges, and the algorithm is not so fast as in the space mode. The rest of the algorithms, namely applying BPE units to a corpus, extracting alignments, and calculating scores remain the same. However, it is important to consider that when aligning units this way, a unit containing multiple words might get aligned to a unit containing also multiple words, so the mapping subword to word is slightly altered, relative to the previous case where only parts of words were aligned.
+Since now merges between words are possible, there are many more possible merges, and the algorithm is not as fast as in the space mode. The rest of the algorithms, namely applying BPE units to a corpus, extracting alignments, and calculating scores remain the same. However, it is important to consider that when aligning units this way, a unit containing multiple words might get aligned to a unit containing also multiple words, so the mapping subword to word is slightly altered, relative to the previous case where only parts of words were aligned.
