--- a/doc/sections/6-development.tex
+++ b/doc/sections/6-development.tex
@@ -6,12 +6,12 @@
 
 \chapter{Development}\label{ch:development}
 
-This chapter explains the development of the thesis in a deeper way, adding more detailed explanations, the code and algorithms previously explained in the Methodology section.~\ref{ch:methodology} This chapter includes coding practices, how global variables are stored and trated, the tree directory of the project, and the various tasks that have been undertaken during this thesis, which include the following:
+This chapter explains the development of the thesis in a deeper way, adding more detailed explanations, the code and algorithms previously explained in the Methodology section.~\ref{ch:methodology} This chapter includes coding practices, how global variables are stored and treated, the tree directory of the project, and the various tasks that have been undertaken during this thesis, which include the following:
 
 \begin{enumerate}
-  \item Replication BPE algorithm and results
-  \item Replication BPE dropout algorithm and results
-  \item Improvemenet of the learn BPE algorithm
+  \item Replication of the BPE algorithm and results
+  \item Replication of the BPE dropout algorithm and results
+  \item Improvement of the learn BPE algorithm
   \item Study and implementation of BPE without word boundaries
 \end{enumerate}
 
@@ -22,6 +22,7 @@ To ensure consistency, the parameters for the pipeline, called global variables,
 \begin{python}
 # settings.py
 import os
+import glob
 from os.path import join
 
 word_sep = u'\u2581'
@@ -38,28 +39,27 @@ bpedir = join(datadir, 'normal_bpe')
 baselinedir = join(rootdir, 'reports', 'scores_normal_bpe')
 scoredir = join(rootdir, 'reports', 'scores_normal_bpe')
 goldpath = join(inputdir, 'eng_deu.gold')
-inputpath = {source: join(inputdir, source+'_with_10k.txt'),
-            target: join(inputdir, target+'_with_10k.txt')}
-
-fastalign_path = join(rootdir, "tools/fast_align/build/fast_align")
-atools_path = join(rootdir, "tools/fast_align/build/atools")
+inputpath = {}
+for filename in glob.glob(join(inputdir, "*.txt")):
+  inputpath[filename.split(os.sep)[-1].split('_')[0]] = filename
 \end{python}
 
-Regarding directories and paths, the tree view of the project is displayed in the following figure. The input data is saved into \emph{data/input}, the rest of the intermediate data files such as \emph{.bpe}, \emph{.wgdfa} and others are saved into their respective folder depending on the dropout parameter. The models are saved in the general \emph{data} folder with the \emph{.model} extension. The \LaTeX files for writing this thesis are saved in the \emph{doc}, the score figures and csv files in \emph{reports}, all Python scripts in \emph{src}, the Fastalign and Eflomal installation files in \emph{tools}, and README, requirements, gitignore and the global variable file \emph{settings.py} are saved in the root folder.
+Regarding directories and paths, the tree view of the project is displayed in the following figure. The input data is saved into \emph{data/input}, the rest of the intermediate data files such as \emph{.bpe}, \emph{.wgdfa} and others are saved into their respective folder depending on the dropout parameter. The models are saved in the general \emph{data} folder with the \emph{.model} extension. The LaTeX files for writing this thesis are saved in the \emph{doc} folder, the score figures and csv files in \emph{reports}, all Python scripts in \emph{src}, the \emph{Fastalign} and \emph{Eflomal} installation files in \emph{tools}, and README, requirements, gitignore and the global variable file \emph{settings.py} are saved in the root folder.
 
 \begin{figure}[!ht]
     \centering
-    \includegraphics[width=16cm]{figures/dir.png}
+    \includegraphics[width=14cm]{figures/dir.png}
     \caption{Project directories in tree mode}
 \end{figure}
 
+\clearpage
 \section{Replication of BPE results}
 
 The first programming task in this thesis has been to replicate the BPE results from Sennrich et al.~\cite{sennrich2015neural}. In order to modularize the code in clear units, these have been the steps:
 
 \begin{enumerate}
-    \item Write learn BPE from corpus algorithm
-    \item Write apply BPE to corpus algorithm
+    \item Write the learn BPE from corpus algorithm
+    \item Write the apply BPE to corpus algorithm
     \item Write extract alignments script
     \item Write calculate alignment scores script
 \end{enumerate}
@@ -116,7 +116,7 @@ def get_stats(tokens: list) -> Counter:
     ('s', 'h'): 5,
     ('h', 'e'): 6
   }
-  The last token '.' or word_sep. isn't merged with anything.
+  The last token '.' or word_sep. is not merged with anything.
   '''
   pairs = Counter()
   for i, sent in enumerate(tokens):
@@ -129,7 +129,7 @@ def get_stats(tokens: list) -> Counter:
   return pairs
 \end{python}
 
-Following the algorithm explained in the previous chapter,~\ref{met:learnbpe}, in the big loop the most frequent pair is extracted, the corpus merged, pairs extracted again and so on.
+Following the algorithm explained in the previous chapter,~\ref{met:learnbpe}, the big/outer loop iterates between extraction of highest frequency pairs and merging of corpus until the maximum number of merges is reached.
 
 \begin{python}
 # learn_bpe.py
@@ -205,7 +205,7 @@ def load_data() -> (list, list, list):
   return langs, bpe_models, corpora
 \end{python}
 
-Once this data is available, the merge list is applied to the corpus iteratively, for the symbols present in the global variable \emph{all\_symbols}. To avoid repetition, when aiming for 8000 merges, the loop is halted at 100, 500 merges respectively, in order to save the state of the corpus into the \emph{.bpe} file. After writing the file in the system, the loop resumes again. A less efficient approach would be making the loop run until 100 merges, then start from scratch and run until 500, and so on. This method is equally effective but nearly as efficient.
+Once this data is available, the merge list is applied to the corpus iteratively, for the symbols present in the global variable \emph{all\_symbols}. To avoid repetition, when aiming for 8000 merges, the loop is halted at 100, 500 merges respectively, in order to save the state of the corpus into the \emph{.bpe} file. After writing the file in the system, the loop resumes again. A less efficient approach would be making the loop run until 100 merges, then start from scratch and run until 500, and so on. This method is equally effective but not nearly as efficient.
 
 \begin{python}
 # apply_bpe.py
@@ -247,11 +247,14 @@ After this step, in the directory \emph{../data/normal\_bpe/segmentations/} vari
 
 \subsection{Extract alignments}\label{dev:extractalign}
 
-This step requires some prior installation of the alignment software. The thesis has been conducted in a Linux environment, so the installation guide is adapted to this case. The installation of the software in any other OS is however possible, as long as the user adapts the commands to their OS. Initially, if not present in the system, it is mandatory to \href{https://cmake.org/install/}{install Cmake}. The installation steps for \emph{fast\_align} are as follows, in bash.
+This step requires some prior installation of the alignment software. The thesis has been conducted in a Linux environment, so the installation guide is adapted to this case. The installation of the software in any other OS is however possible, as long as the user adapts the commands to their OS. Initially, if not present in the system, it is mandatory to \href{https://cmake.org/install/}{install Cmake}. The installation steps for \emph{Fastalign} are as follows, in bash. The path \emph{path/to/project} should be the path to where the README, data folders and so on are present. Here, a new folder named \emph{tools} is created to save the alignment algorithms.
 
+\clearpage
 \begin{quote}
   sudo apt-get install libgoogle-perftools-dev libsparsehash-dev\\
-  cd ../path/to/project\\
+  cd /path/to/project\\
+  mkdir tools\\
+  cd tools\\
   git clone https://github.com/clab/fast\_align.git\\
   cd fast\_align\\
   mkdir build\\
@@ -260,9 +263,10 @@ This step requires some prior installation of the alignment software. The thesis
   make
 \end{quote}
 
-And for \emph{eflomal}:
+And for \emph{Eflomal}:
 
 \begin{quote}
+  cd /path/to/project/tools\\
   git clone https://github.com/robertostling/eflomal.git\\
   cd eflomal\\
   make\\
@@ -270,13 +274,23 @@ And for \emph{eflomal}:
   python3 setup.py install
 \end{quote}
 
-In this step, as a general notion, the extract alignments script takes two files as input: English BPE file, German BPE file, and outputs an alignment file, with the extension .wgdfa. First of all, it's necessary to iterate through the different merge types that have been done before. There are BPE files with 100 merges, 200, 500, etc for both languages. At each iteration, a different alignment file is created. Regarding alignment algorithms, they work on parallel data, that is, they expect text in the following format:
+The paths for the installation are then saved in the global variable file, as well as the \emph{mode} to make the alignments, either of the two algorithms.
+
+\begin{python}
+# settings.py
+mode = "fastalign" #fastalign, eflomal
+fastalign_path = join(rootdir, "tools/fast_align/build/fast_align")
+atools_path = join(rootdir, "tools/fast_align/build/atools")
+eflomal_path = join(rootdir, "tools/eflomal")
+\end{python}
+
+In this step, as a general notion, the extract alignments script takes two files as input: English BPE file, German BPE file, and outputs an alignment file, with the extension .wgdfa. First of all, it is necessary to iterate through the different merge types that have been done before. There are BPE files with 100 merges, 200, 500, etc for both languages. At each iteration, a different alignment file is created. Regarding alignment algorithms, they work on parallel data, that is, they expect text in the following format:
 
 \begin{quote}
   Hello from England ||| Hallo aus Deutschland
 \end{quote}
 
-Since the BPE files don't have this format, they are actually separated into two files, namely \emph{deu} and \emph{eng} files, first of all the function \emph{create\_parallel\_text} creates a \emph{.txt} file in the appropriate parallel format.
+Since the BPE files do not have this format, they are actually separated into two files, namely \emph{deu} and \emph{eng} files, first of all the function \emph{create\_parallel\_text} creates a \emph{.txt} file in the appropriate parallel format.
 
 \begin{python}
 # extract_alignments.py
@@ -391,7 +405,7 @@ def bpe_word_align(bpes: dict, bpe_aligns: list) -> str:
   return all_word_aligns
 \end{python}
 
-The alignment algorithm is run for two types of files. Firstly, for the raw corpus itself, the alignment algorithm is run to align the English raw corpus with the German raw corpus, which will serve as baseline to check how good the BPE merges are. And then, the alignment algorithm is run for the BPE files themselves.
+The alignment algorithm is executed for two types of files. Firstly, for the raw corpus itself, the alignment algorithm is executed to align the English raw corpus with the German raw corpus, which will serve as baseline to check how good the BPE merges are. And then, the alignment algorithm is executed for the BPE files themselves.
 
 \begin{python}
 # extract_alignments.py
@@ -493,7 +507,6 @@ def calc_score(input_path: str, probs: dict, surs: dict, surs_count: float) -> (
 
 This step is done for the baseline, to obtain a measure of the standard version of the system, that is, the raw English and German corpora, and then for the BPE files itself.
 
-\clearpage
 \begin{python}
 # calc_align_scores.py
 def get_baseline_score(probs: dict, surs: dict, surs_count: int) -> pd.DataFrame:
@@ -514,7 +527,7 @@ def calc_align_scores(probs: dict, surs: dict, surs_count: int):
   return df
 \end{python}
 
-The scores for the baseline and the corresponding BPE file are obtained and stored in a DataFrame data structure. Next, this data is plotted and saved into \emph{.png} and \emph{.csv} files.
+The scores for the baseline and the corresponding BPE files are obtained and stored in a DataFrame data structure. Next, this data is plotted and saved into \emph{.png} and \emph{.csv} files.
 
 \begin{python}
 # calc_align_scores.py
@@ -550,7 +563,7 @@ if __name__ == "__main__":
 
 \section{Replication of BPE dropout}
 
-The previous section has laid the backbone of the algorithms, the various files and functions. In this and the following sections, some modifications and improvements are introduced to the already existing Python scripts. For the sake of simplicity, the code snippets that follow only include the new changes, or the functions from the last section with new modifications, and the modifications are introduced by signaling the line numbers from previous scripts in which changes are introduced. For example, it might be mentioned that a certain line is added to line 21 of a certain function in a specific script. This refers to the function introduced in the previous section, and it will be referred as such. In the case that a function is altered in a significant way, the new version of the function will be shown, which overrules the previous version. The functions that remain unaltered aren't shown.
+The previous section has laid the backbone of the algorithms, the various files and functions. In this and the following sections, some modifications and improvements are introduced to the already existing Python scripts. For the sake of simplicity, the code snippets that follow only include the new changes, or the functions from the last section with new modifications, and the modifications are introduced by signalling the line numbers from previous scripts in which changes are introduced. For example, it might be mentioned that a certain line is added to line 21 of a certain function in a specific script. This refers to the function introduced in the previous section, and it will be referred as such. In the case that a function is altered in a significant way, the new version of the function will be shown, which overrules the previous version. The functions that remain unaltered are not shown.
 
 When adding dropout to BPE, three new parameters come into play in the project, namely \textbf{dropout} rate, \textbf{dropout\_samples}, that is, how many samples of the dropout system are considered, and \textbf{merge\_threshold}, which serves its function with alignments later on. These values are saved into \emph{settings.py}, as well as new data directories to store files resulting from BPE dropout.
 
@@ -567,11 +580,11 @@ scoredir = join(rootdir, 'reports', 'scores_' + ('dropout_bpe' if dropout > 0 el
 
 \subsection{Apply BPE to corpus with dropout}
 
-The first modifications in the project occur in \emph{apply\_bpe.py}, where some merges are skipped, and the process is repeated 10 times. More theoretical insights regarding this approach can be found in the Methodology section~\ref{met:replbpedrop}. The function \emph{apply\_bpe} includes two new lines where a random number between 0 and 1 is generated. If this number is smaller than the \emph{dropout} rate saved in \emph{settings.py}, then that merge isn't considered and the loop skips it. This means that if the \emph{dropout} variable has the value of 0.1, 10\% of merges are skipped.
+The first modifications in the project occur in \emph{apply\_bpe.py}, where some merges are skipped, and the process is repeated 10 times. More theoretical insights regarding this approach can be found in the Methodology section~\ref{met:replbpedrop}. The function \emph{apply\_bpe} includes two new lines where a random number between 0 and 1 is generated. If this number is smaller than the \emph{dropout} rate saved in \emph{settings.py}, then that merge is not considered and the loop skips it. This means that if the \emph{dropout} variable has the value of 0.1, 10\% of merges are skipped.
 
-Additionally, in the main function, the function \emph{apply\_bpe} is called \emph{dropout\_samples} times. To save the files accordingly, a new variable is introduced, namely \emph{i}, that does nothing in the case where dropout=0, but when repeating the process, for instance if lang=eng, num\_symbols=2000, and first iteration of dropout, that is, i=0, the files are saved as \emph{eng\_2000\_0.bpe} instead, and so on for further iterations. This is effectively achieved by changing the variable \emph{outputpath}
+Additionally, in the main function, the function \emph{apply\_bpe} is called \emph{dropout\_samples} times. To save the files accordingly, a new variable is introduced, namely \emph{i}, that does nothing in the case where dropout=0, but when repeating the process, for instance if lang=eng, num\_symbols=2000, and first iteration of dropout, that is, i=0, the files are saved as \emph{eng\_2000\_0.bpe} instead, and so on for further iterations. This is effectively achieved by changing the variable \emph{outputpath}.
 
-In the function \emph{write\_bpe} in the general pipeline~\ref{dev:applybpe}, the following modifications are made
+In the function \emph{write\_bpe} in the general pipeline~\ref{dev:applybpe}, the following modifications are made:
 
 \begin{python}
 # apply_bpe.py
@@ -607,11 +620,10 @@ if __name__ == "__main__":
 
 \subsection{Extract alignments with dropout}
 
-The only change in this step is that the \emph{extract\_alignment}~\ref{dev:extractalign} function is called \emph{dropout\_samples} times, which changes the function to write the alignments in the new format, namely, changing the variables \emph{sourcepath} and \emph{targetpath}. Additionally, the gold standard's alignments don't need to be calculated since the baseline are the BPE scores rather than the gold standard scores. The rest, the alignment algorithm, remains unchanged.
+The only change in this step is that the \emph{extract\_alignment}~\ref{dev:extractalign} function is called \emph{dropout\_samples} times, which changes the function to write the alignments in the new format, namely, changing the variables \emph{sourcepath} and \emph{targetpath}. Additionally, the gold standard's alignments do not need to be calculated since the baseline are the BPE scores rather than the gold standard scores. The rest of the alignment algorithm remains unchanged.
 
 \begin{python}
 # extract_alignments.py
-
 # change line 2
 def extract_alignments(i: int =-1, input_mode: bool =False):
 
@@ -729,7 +741,7 @@ if __name__ == "__main__":
 
 \section{Improvement of learn BPEs algorithm}\label{dev:improvbpe}
 
-As explained in the methodology~\ref{sec:improvlearnbpe}, the main improvement in the learn BPE algorithm is to only update previous and next tokens to the merged pair, as well as saving the indexes where each pair occurs. These improvements are built on top of the code shown in~\ref{subsec:learnbpe}. 
+As explained in the methodology~\ref{sec:improvlearnbpe}, the main improvement in the learn-BPE algorithm is to only update previous and next tokens to the merged pair, as well as saving the indexes where each pair occurs. These improvements are built on top of the code shown in~\ref{subsec:learnbpe}. 
 
 In the \emph{learn\_bpe} function, the new \emph{update\_tokens} returns the updated pairs and the merged tokens, all in one step. The function \emph{get\_stats}, which is the function that iterates the whole corpus, only has to be performed once. This is however a modification of the previous \emph{get\_stats} function, since it computes the indexes of the pairs as well.
 
@@ -757,9 +769,10 @@ def learn_bpe(corpus: list, bpe_model: list): list:
   return most_freq_merges
 \end{python}
 
-These are the modifications introduced in the \emph{get\_stats} function so that it saves the pair indexes. In the \emph{idx} data structure, not only is the index saved, but also the amount of appearances of each pair in that sentence. This is done to ensure that if the pair ('t', 'h') in index 0 now becomes ('t', 'he') because of the ('h', 'e') merge, and the frequency of ('t', 'h') is reduced by one, it might be assumed that ('t', 'h') no longer appears in that sentence. But this would be a mistake, since there might be other instances of ('t', 'h') in the sentence that aren't altered by this merge. We only want to say that ('t', 'h') no longer appears in index 0 when all instances of ('t', 'h') have been merged with other sequences. This is the motivation behind storing the amount of appearances of each pair in a sentence.
+These are the modifications introduced in the \emph{get\_stats} function so that it saves the pair indexes. In the \emph{idx} data structure, not only is the index saved, but also the amount of appearances of each pair in that sentence. This is done to ensure that if the pair ('t', 'h') in index 0 now becomes ('t', 'he') because of the ('h', 'e') merge, and the frequency of ('t', 'h') is reduced by one, it might be assumed that ('t', 'h') no longer appears in that sentence. But this would be a mistake, since there might be other instances of ('t', 'h') in the sentence that are not altered by this merge. We only want to say that ('t', 'h') no longer appears in index 0 when all instances of ('t', 'h') have been merged with other sequences. This is the motivation behind storing the amount of appearances of each pair in a sentence.
 
 \begin{python}
+# learn_bpe.py
 def get_stats(tokens: list) -> (Counter, dict):
   """
   Count frequency of all bigrams, the indexes where they occur and the frequency per index.
@@ -792,9 +805,10 @@ def get_stats(tokens: list) -> (Counter, dict):
   return pairs, idx
 \end{python}
 
-the \emph{update\_tokens} function handles the situation where only the previous and after tokens are updated for each merged pair. Comments are included in the code for readability.
+The \emph{update\_tokens} function handles the situation where only the previous and after tokens are updated for each merged pair. Comments are included in the code for readability.
 
 \begin{python}
+# learn_bpe.py
 def update_tokens(tokens, idx, pairs, pair):
 
   def update_freqs(pairs, idx, pair, new_pair=-1):
@@ -843,10 +857,10 @@ def update_tokens(tokens, idx, pairs, pair):
       if sent[k].split() and sent[k][-1] == ' ' and word_sep not in pair[0][0]:
         '''
         conditions to update the **previous** token:
-        * if sent[k] isn't empty. if it is, there's no previous token to update.
-        * if the merged_pair isn't the beginning of the word.
-          * in this case, we don't want the last letter from the prev word to be merged with
-          * our current pair. ... e _t h ... we don't want to consider ('e', '_t')
+        * if sent[k] is not empty. if it is, there's no previous token to update.
+        * if the merged_pair is not the beginning of the word.
+          * in this case, we do not want the last letter from the prev word to be merged with
+          * our current pair. ... e _t h ... we do not want to consider ('e', '_t')
         '''
         prev = (sent[k].split()[-1], pair[0])
         new_pair = (prev[0], merged_pair)
@@ -855,7 +869,7 @@ def update_tokens(tokens, idx, pairs, pair):
       if not sent[k+1].split() and word_sep not in pair[0][0]:
         '''
         conditions to update the **after** token when merged bigrams are consecutive:
-        * when the pair's first character isn't the beginning of the word
+        * when the pair's first character is not the beginning of the word
         * and when the next token is empty
         * we're dealing with consecutive merged pairs, merged_pair = ('ssi'), sent= 'm i ssi ssi p p i'
             * in this case, we delete the token between the merged_pair: ('i', 's')
@@ -871,8 +885,8 @@ def update_tokens(tokens, idx, pairs, pair):
       elif sent[k+1].split() and word_sep not in sent[k+1].split()[0]:
         '''
         conditions to update the **after** token in a more general case:
-        * if sent[k] isn't empty. if it is, there's no after token to update.
-        * if the after token is a new word, we don't want to consider it.
+        * if sent[k] is not empty. if it is, there's no after token to update.
+        * if the after token is a new word, we do not want to consider it.
         '''
         after = (pair[1], sent[k+1].split()[0])
         new_pair = (merged_pair, after[1])
@@ -886,25 +900,23 @@ The performance improvements of this approach can be seen in the Results section
 
 \section{BPE without word boundaries}
 
-As explained in the Methodology chapter, this addition considers BPE units between different words. The only change occurs when learning these BPE units and mapping multiple-word-units to multiple-word-units, the rest of the pipeline remains as is, other than changing the filenames and paths of the alignments and scores. A new boolean variable is introduced in \emph{settings.py}, so that by changing it to True will make the whole pipeline act in space mode, that is, setting the space boundary and only allowing merges between words. On the contrary, no space mode allows merges between different words.
+As explained in the Methodology chapter, this addition considers BPE units between different words. The only change occurs when learning these BPE units and mapping multiple-word-units to multiple-word-units, the rest of the pipeline remains as is, other than changing the filenames and paths of the alignments and scores. A new Boolean variable is introduced in \emph{settings.py}, so that by changing it to a positive value will make the whole pipeline act in space mode, that is, setting the space boundary and only allowing merges between words. On the contrary, no space mode allows merges between different words.
 
 \begin{python}
 # settings.py
-
 space = False
 \end{python}
 
-The following scripts for learning BPEs and extracting and mapping alignments are generalized in the sense that just by changing the boolean variable in the settings file, the pipeline runs automatically and no further changes need to be done. The code snippets below display these functionality, accepting both modes.
+The following scripts for learning BPEs and extracting and mapping alignments are generalized in the sense that just by changing the Boolean variable in the settings file, the pipeline runs automatically and no further changes need to be done. The code snippets below display these functionality, accepting both modes.
 
 In \emph{learn\_bpe.py}, the way to parse and tokenize the corpus is slightly different, now instead of having a special token to denote the beginning of a word, the special token denotes the whitespace.
 
 \begin{python}
 # learn_bpe.py
-
 def read_corpus(corpus: list) -> list:
   '''
   Read corpus, strip index and new line characters.
-  In space mode, each word has a word_sep symbol at the beginning to signal it's the beginning of the word.
+  In space mode, each word has a word_sep symbol at the beginning to signal it is the beginning of the word.
   tokens = [
     'w e \_d o \_n o t \_b e l i e v e \_t h a t \_w e \_s h o u l d \_c h e r r y - p i c k \_.',
   ]
@@ -927,11 +939,10 @@ def read_corpus(corpus: list) -> list:
   return tokens
 \end{python}
 
-When analyzing pairs and their frequencies, each word's last character and the following whitespace has to be considered, as well as this whitespace and the following word's first character. This changes the \emph{get\_stats} function slightly.
+When analysing pairs and their frequencies, each word's last character and the following whitespace has to be considered, as well as this whitespace and the following word's first character. This changes the \emph{get\_stats} function slightly.
 
 \begin{python}
 # learn_bpe.py
-
 def get_stats(tokens: list) -> (Counter, dict):
   '''
   Count frequency of all bigrams, the indexes where they occur and the frequency per index.
@@ -946,7 +957,7 @@ def get_stats(tokens: list) -> (Counter, dict):
         1: 3,
     }
   }
-  In space mode, the last token '.' or word_sep. isn't merged with anything.
+  In space mode, the last token '.' or word_sep. is not merged with anything.
   '''
   def get_pairs_idx(pairs, idx, symbols):
     symbols = symbols.split()
@@ -973,37 +984,35 @@ And finally, after merging a pair in the corpus, when updating the tokens and th
 
 \begin{python}
 # learn_bpe.py
-
 def update_tokens(tokens: list, idx: dict, pairs: Counter, pair: tuple) -> (list, dict, Counter):
 
 # change line 46
 if sent[k].split() and (sent[k][-1] == ' ' and word_sep not in pair[0][0] if space else True):
   '''
   conditions to update the **previous** token:
-  * in space mode, if the merged_pair isn't the beginning of the word.
-    * in this case, we don't want the last letter from the prev word to be merged with
-    * our current pair. ... e _t h ... we don't want to consider ('e', '_t')
+  * in space mode, if the merged_pair is not the beginning of the word.
+    * in this case, we do not want the last letter from the prev word to be merged with
+    * our current pair. ... e _t h ... we do not want to consider ('e', '_t')
   '''
 
 # change line 58
 if space and not sent[k+1].split() and word_sep not in pair[0][0]:
   '''
   conditions to update the **after** token when merged bigrams are consecutive:
-  * in space mode specifically, when the pair's first character isn't the beginning of the word
+  * in space mode specifically, when the pair's first character is not the beginning of the word
   '''
 
 # change line 74
 elif sent[k+1].split() and (word_sep not in sent[k+1].split()[0] if space else True):
   '''
-  * in space mode, if the after token is a new word, we don't want to consider it.
+  * in space mode, if the after token is a new word, we do not want to consider it.
   '''
 \end{python}
 
 The \emph{apply\_bpe.py} remains unchanged, aligning BPE files as well with the \emph{Fastalign} or \emph{Eflomal} algorithm as well. However, since now the alignments are among many words, the mapping is different than in the space case. The mapping is divided into subword to word mapping (map\_subword\_.to\_word function) and multiword to word (map\_multiword\_to\_word).
 
 \begin{python}
-# extract_alignmens.py
-
+# extract_alignments.py
 def map_subword_to_word(corpus, bpes, lang):
   '''
   SPACE MODE
@@ -1037,6 +1046,7 @@ def map_subword_to_word(corpus, bpes, lang):
 And the new \emph{map\_multiword\_to\_word} function.
 
 \begin{python}
+# extract_alignments.py
 def map_multiple_to_word(corpus, bpes, lang):
   '''
   NO SPACE MODE
@@ -1087,6 +1097,7 @@ def map_multiple_to_word(corpus, bpes, lang):
 Consequently, the function \emph{load\_and\_map\_segmentations} is altered in the following way:
 
 \begin{python}
+# extract_alignments.py
 def load_and_map_segmentations(num_symbols, i=-1):
   bpes = {}
   for lang in [source, target]:
